<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="clear">MC</string>
    <string name="add_the_current">M+</string>
    <string name="textViewOutputScreen">0</string>
    <string name="add">+</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="Cancel">C</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="sub">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="unity_operator">+/-</string>
    <string name="subtract_the_current">M-</string>
    <string name="recall_the_current_memory">MR</string>
</resources>
